--- a/static/css/base.css
+++ b/static/css/base.css
@@ -377,7 +377,7 @@ textarea[name="message"] {
 }
 
 .logo-font {
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 
